exports[`Head Tags - All in One SEO Pack 3 > Post > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/hello-world/"
/>
`;

exports[`Head Tags - All in One SEO Pack 3 > Page > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/sample-page/"
/>
`;

exports[`Head Tags - All in One SEO Pack 3 > Page > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseop-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "sameAs": []
      },
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "publisher": { "@id": "http://my.frontity.site/#organization" },
        "potentialAction": {
          "@type": "SearchAction",
          "target": "http://my.frontity.site/?s={search_term_string}",
          "query-input": "required name=search_term_string"
        }
      },
      {
        "@type": "WebPage",
        "@id": "http://my.frontity.site/sample-page/#webpage",
        "url": "http://my.frontity.site/sample-page/",
        "inLanguage": "en-US",
        "name": "Sample Page",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/sample-page/#breadcrumblist"
        },
        "datePublished": "2020-08-20T01:31:05+00:00",
        "dateModified": "2020-08-20T01:31:05+00:00"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/sample-page/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "position": 1,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/",
              "url": "http://my.frontity.site/",
              "name": "Test WP Site"
            }
          },
          {
            "@type": "ListItem",
            "position": 2,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/sample-page/",
              "url": "http://my.frontity.site/sample-page/",
              "name": "Sample Page"
            }
          }
        ]
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack 3 > Category > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/category/nature/"
/>
`;

exports[`Head Tags - All in One SEO Pack 3 > Category > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseop-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "sameAs": []
      },
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "publisher": { "@id": "http://my.frontity.site/#organization" },
        "potentialAction": {
          "@type": "SearchAction",
          "target": "http://my.frontity.site/?s={search_term_string}",
          "query-input": "required name=search_term_string"
        }
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/category/nature/#collectionpage",
        "url": "http://my.frontity.site/category/nature/",
        "inLanguage": "en-US",
        "name": "Nature",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/category/nature/#breadcrumblist"
        }
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/category/nature/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "position": 1,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/",
              "url": "http://my.frontity.site/",
              "name": "Test WP Site"
            }
          },
          {
            "@type": "ListItem",
            "position": 2,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/category/nature/",
              "url": "http://my.frontity.site/category/nature/",
              "name": "Nature"
            }
          }
        ]
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack 3 > Tag > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/tag/japan/"
/>
`;

exports[`Head Tags - All in One SEO Pack 3 > Tag > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseop-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "sameAs": []
      },
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "publisher": { "@id": "http://my.frontity.site/#organization" },
        "potentialAction": {
          "@type": "SearchAction",
          "target": "http://my.frontity.site/?s={search_term_string}",
          "query-input": "required name=search_term_string"
        }
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/tag/japan/#collectionpage",
        "url": "http://my.frontity.site/tag/japan/",
        "inLanguage": "en-US",
        "name": "Japan",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/tag/japan/#breadcrumblist"
        }
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/tag/japan/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "position": 1,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/",
              "url": "http://my.frontity.site/",
              "name": "Test WP Site"
            }
          },
          {
            "@type": "ListItem",
            "position": 2,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/tag/japan/",
              "url": "http://my.frontity.site/tag/japan/",
              "name": "Japan"
            }
          }
        ]
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack 3 > Author > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/author/luisherranz/"
/>
`;

exports[`Head Tags - All in One SEO Pack 3 > Homepage > should render the correct canonical link #0`] = `
<link data-rh="true" rel="canonical" href="http://my.frontity.site/" />
`;

exports[`Head Tags - All in One SEO Pack 3 > Homepage > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseop-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "sameAs": []
      },
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "publisher": { "@id": "http://my.frontity.site/#organization" },
        "potentialAction": {
          "@type": "SearchAction",
          "target": "http://my.frontity.site/?s={search_term_string}",
          "query-input": "required name=search_term_string"
        }
      },
      {
        "@type": "WebPage",
        "@id": "http://my.frontity.site/#webpage",
        "url": "http://my.frontity.site/",
        "inLanguage": "en-US",
        "name": "Test WP Site",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": { "@id": "http://my.frontity.site/#breadcrumblist" },
        "description": "Just another WordPress site",
        "about": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "position": 1,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/",
              "url": "http://my.frontity.site/",
              "name": "Test WP Site"
            }
          }
        ]
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack 3 > CPT > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/movie/the-terminator/"
/>
`;

exports[`Head Tags - All in One SEO Pack 3 > CPT > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseop-schema">
  {}
</script>
`;

exports[`Head Tags - All in One SEO Pack 3 > CPT (archive) > should render the correct canonical link #0`] = `
<link data-rh="true" rel="canonical" href="http://my.frontity.site/movies/" />
`;

exports[`Head Tags - All in One SEO Pack 3 > CPT (archive) > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseop-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "sameAs": []
      },
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "publisher": { "@id": "http://my.frontity.site/#organization" },
        "potentialAction": {
          "@type": "SearchAction",
          "target": "http://my.frontity.site/?s={search_term_string}",
          "query-input": "required name=search_term_string"
        }
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/movies/#collectionpage",
        "url": "http://my.frontity.site/movies/",
        "inLanguage": "en-US",
        "name": "Movies",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/movies/#breadcrumblist"
        }
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/movies/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "position": 1,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/",
              "url": "http://my.frontity.site/",
              "name": "Test WP Site"
            }
          },
          {
            "@type": "ListItem",
            "position": 2,
            "item": {
              "@type": "WebPage",
              "@id": "http://my.frontity.site/movies/",
              "url": "http://my.frontity.site/movies/",
              "name": "Movies"
            }
          }
        ]
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack 3 > Custom Taxonomy > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/actor/linda-hamilton/"
/>
`;

exports[`Head Tags - All in One SEO Pack 3 > Custom Taxonomy > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseop-schema">
  {}
</script>
`;
